Correct alignment of content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -534,19 +534,19 @@ PAGE 404
     align-items: center;
   }
 
-.error-message h1 {
+.error-message > h1 {
     font-size: 36px;
     margin-bottom: 20px;
     text-align: center;
 }
 
-.error-message p {
+.error-message > p {
     font-size: 18px;
     margin-bottom: 30px;
     text-align: center;
 }
 
-.error-message img {
+.error-message > img {
     width: 461px;
     height: 334px;
     margin-bottom: 20px;
